Работают функции html_to_pdf. Недоработан swagger
