# config/routes.rb
@@ -4,8 +4,8 @@ Rails.application.routes.draw do
   # For details on the DSL available within this file, see https://guides.rubyonrails.org/routing.html
 
   namespace :api do
-    # post 'html_to_pdf', to: 'pdf#html_to_pdf'
-    #
+    post 'html_to_pdf', to: 'pdf#html_to_pdf'
+
     # get 'html_to_image', to: 'image#html_to_image'
     # post 'html_to_image', to: 'image#html_to_image'
     #
@@ -14,5 +14,6 @@ Rails.application.routes.draw do
 
   namespace :cdn do
     get 'barcodes/:barcode', to: 'barcode#barcode_to_image'
+    post 'html_to_pdf', to: 'pdf#html_to_pdf'
   end
 end
